--- a/static/css/site.css
+++ b/static/css/site.css
@@ -56,3 +56,11 @@ table {
 h1, h2, h3, p, a {
   font-family: 'Muli', sans-serif;
 }
+
+/* Stylized Horizontal Rules https://css-tricks.com/examples/hrs/ */
+
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
